Release 1: After migration